# autoheal-rs

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  clippy.toml  cog.toml  package-lock.json  package.json  project-words.txt  update-from-upstream.sh
.github/: settings.yml
.github/workflows/: build.yml  ci.yml  release.yml  retag-containers-after-push.yml  rust.yml  semantic-tags-after-release.yml  semgrep.yml  test-release.yml  yml-lint.yml
build-scripts/: build.sh
crates/autoheal-rs/: Cargo.toml
crates/autoheal-rs/src/: config.rs  docker_healer.rs  encoding.rs  ffi_handlers.rs  main.rs  unhealthy_filters.rs  webhook.rs
crates/autoheal-rs/src/docker/: client.rs  container.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/docker/: client.rs  container.rs
integration-tests/: .env  README.md  docker-compose.autoheal.yml  docker-compose.build.yml  docker-compose.image.yml  docker-compose.imageid.yml  docker-compose.yml  log.txt  tests.sh
integration-tests/watch-autoheal/: Dockerfile  entrypoint.sh
src/: api_config.rs  app_config.rs  container.rs  container_info.rs  docker.rs  docker_config.rs  docker_connection.rs  docker_healer.rs  encoding.rs  env.rs  ffi_handlers.rs  filters.rs  handlers.rs  helpers.rs  http_client.rs  main.rs  support.rs  unhealthy_filters.rs  webhook.rs
src/docker/: client.rs  container.rs
