[package]
name = "autoheal-rs"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.81.0"
authors = ["Kristof Mattei"]
description = "Monitoring application for docker containers"
license-file = "LICENSE"
categories = ["command-line-utilities"]
keywords = ["docker", "health"]
repository = "https://github.com/kristof-mattei/autoheal-rs"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
pedantic = "warn"
cargo = "warn"
# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[profile.dev.package.backtrace]
opt-level = 3

[features]
coverage = []

[dependencies]
backtrace = "0.3.74"
color-eyre = { git = "https://github.com/eyre-rs/eyre", rev = "2dc0688d33a487009e8bc3222cbab135261383b0", features = [
    "track-caller",
] }
hashbrown = "0.15.0"
hex = "0.4.3"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", default-features = false }
hyper-tls = { version = "0.6.0", default-features = false, features = [
    "vendored",
] }
hyper-unix-socket = "0.0.0-development"
hyper-util = { version = "0.1.9", default-features = false, features = [
    "client-legacy",
    "http1",
    "tokio",
] }
libc = "0.2.159"
percent-encoding = "2.3.1"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "net",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["expose_internals"] }
