[package]
name = "autoheal-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
clap = { version = "4.5.58", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.5"
console-subscriber = { version = "0.5.0", optional = true }
hashbrown = { version = "0.16.1", default-features = false, features = [
    "default-hasher",
    "equivalent",
    "inline-more",
] }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", default-features = false }
hyper-rustls = { version = "0.27.7", features = ["http2"] }
hyper-unix-socket = "0.3.0"
hyper-util = { version = "0.1.20", default-features = false, features = [
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
libc = "0.2.182"
mimalloc = { version = "0.1.48", features = ["v3"] }
percent-encoding = "2.3.2"
rustls = "0.23.36"
rustls-native-certs = "0.8.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "net",
] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "=1.4.1"

[lints]
workspace = true
