[package]
name = "autoheal-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.5"
console-subscriber = { version = "0.5.0", optional = true }
hashbrown = { version = "0.17.0", default-features = false, features = [
    "default-hasher",
    "equivalent",
    "inline-more",
] }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", default-features = false }
hyper-rustls = { version = "0.27.9", features = ["http2"] }
hyper-util = { version = "0.1.20", default-features = false, features = [
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
libc = "0.2.186"
mimalloc = "0.1.50"
tokio = { version = "1.52.1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "time",
    "tracing",
] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
twistlock = "0.2.0"

[dev-dependencies]
pretty_assertions = "=1.4.1"

[lints]
workspace = true
