[package]
name = "shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true

[features]
default = []

[dependencies]
color-eyre = "0.6.5"
http = "1.4.0"
http-body-util = "0.1.3"
hashbrown.workspace = true
hyper = { version = "1.9.0", default-features = false }
hyper-rustls = { version = "0.27.8", features = ["http2"] }
hyper-unix-socket = "0.3.0"
hyper-util = { version = "0.1.20", default-features = false, features = [
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
rustls = "0.23.37"
rustls-native-certs = "0.8.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tokio = { version = "1.51.1", features = ["time"] }

[dev-dependencies]
pretty_assertions = "=1.4.1"

[lints]
workspace = true
